Kaggle Notebook | Exercise: One-Step Lookahead | Version 3

--- a/exercise-one-step-lookahead.ipynb
+++ b/exercise-one-step-lookahead.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f9f557e1",
+   "id": "92dba3b3",
    "metadata": {
     "papermill": {
-     "duration": 0.004683,
-     "end_time": "2023-05-07T00:23:56.961119",
+     "duration": 0.005232,
+     "end_time": "2023-05-07T00:36:10.105065",
      "exception": false,
-     "start_time": "2023-05-07T00:23:56.956436",
+     "start_time": "2023-05-07T00:36:10.099833",
      "status": "completed"
     },
     "tags": []
@@ -21,13 +21,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91463729",
+   "id": "5ab1bff8",
    "metadata": {
     "papermill": {
-     "duration": 0.003907,
-     "end_time": "2023-05-07T00:23:56.969463",
+     "duration": 0.004109,
+     "end_time": "2023-05-07T00:36:10.114150",
      "exception": false,
-     "start_time": "2023-05-07T00:23:56.965556",
+     "start_time": "2023-05-07T00:36:10.110041",
      "status": "completed"
     },
     "tags": []
@@ -43,19 +43,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "da1a6407",
+   "id": "0830f325",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:23:56.981411Z",
-     "iopub.status.busy": "2023-05-07T00:23:56.980368Z",
-     "iopub.status.idle": "2023-05-07T00:23:57.186168Z",
-     "shell.execute_reply": "2023-05-07T00:23:57.184833Z"
+     "iopub.execute_input": "2023-05-07T00:36:10.125828Z",
+     "iopub.status.busy": "2023-05-07T00:36:10.124438Z",
+     "iopub.status.idle": "2023-05-07T00:36:10.302597Z",
+     "shell.execute_reply": "2023-05-07T00:36:10.301674Z"
     },
     "papermill": {
-     "duration": 0.21538,
-     "end_time": "2023-05-07T00:23:57.189013",
+     "duration": 0.186451,
+     "end_time": "2023-05-07T00:36:10.304952",
      "exception": false,
-     "start_time": "2023-05-07T00:23:56.973633",
+     "start_time": "2023-05-07T00:36:10.118501",
      "status": "completed"
     },
     "tags": []
@@ -77,13 +77,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c546c07a",
+   "id": "38596e76",
    "metadata": {
     "papermill": {
-     "duration": 0.004115,
-     "end_time": "2023-05-07T00:23:57.197704",
+     "duration": 0.003887,
+     "end_time": "2023-05-07T00:36:10.313394",
      "exception": false,
-     "start_time": "2023-05-07T00:23:57.193589",
+     "start_time": "2023-05-07T00:36:10.309507",
      "status": "completed"
     },
     "tags": []
@@ -139,19 +139,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e65e0633",
+   "id": "24dfde5b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:23:57.207934Z",
-     "iopub.status.busy": "2023-05-07T00:23:57.207540Z",
-     "iopub.status.idle": "2023-05-07T00:24:11.505627Z",
-     "shell.execute_reply": "2023-05-07T00:24:11.504541Z"
+     "iopub.execute_input": "2023-05-07T00:36:10.324762Z",
+     "iopub.status.busy": "2023-05-07T00:36:10.323275Z",
+     "iopub.status.idle": "2023-05-07T00:36:24.438912Z",
+     "shell.execute_reply": "2023-05-07T00:36:24.437719Z"
     },
     "papermill": {
-     "duration": 14.306259,
-     "end_time": "2023-05-07T00:24:11.508233",
+     "duration": 14.123928,
+     "end_time": "2023-05-07T00:36:24.441405",
      "exception": false,
-     "start_time": "2023-05-07T00:23:57.201974",
+     "start_time": "2023-05-07T00:36:10.317477",
      "status": "completed"
     },
     "tags": []
@@ -205,19 +205,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0aca5658",
+   "id": "7a1e036e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:24:11.520118Z",
-     "iopub.status.busy": "2023-05-07T00:24:11.519733Z",
-     "iopub.status.idle": "2023-05-07T00:24:11.525106Z",
-     "shell.execute_reply": "2023-05-07T00:24:11.523869Z"
+     "iopub.execute_input": "2023-05-07T00:36:24.453544Z",
+     "iopub.status.busy": "2023-05-07T00:36:24.452401Z",
+     "iopub.status.idle": "2023-05-07T00:36:24.459815Z",
+     "shell.execute_reply": "2023-05-07T00:36:24.458702Z"
     },
     "papermill": {
-     "duration": 0.014751,
-     "end_time": "2023-05-07T00:24:11.527709",
+     "duration": 0.016263,
+     "end_time": "2023-05-07T00:36:24.462479",
      "exception": false,
-     "start_time": "2023-05-07T00:24:11.512958",
+     "start_time": "2023-05-07T00:36:24.446216",
      "status": "completed"
     },
     "tags": []
@@ -231,13 +231,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baf7442d",
+   "id": "aa47bca1",
    "metadata": {
     "papermill": {
-     "duration": 0.004526,
-     "end_time": "2023-05-07T00:24:11.536882",
+     "duration": 0.004214,
+     "end_time": "2023-05-07T00:36:24.471349",
      "exception": false,
-     "start_time": "2023-05-07T00:24:11.532356",
+     "start_time": "2023-05-07T00:36:24.467135",
      "status": "completed"
     },
     "tags": []
@@ -259,19 +259,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "24f50bfd",
+   "id": "e6d8c14e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:24:11.548493Z",
-     "iopub.status.busy": "2023-05-07T00:24:11.548071Z",
-     "iopub.status.idle": "2023-05-07T00:24:11.553383Z",
-     "shell.execute_reply": "2023-05-07T00:24:11.552211Z"
+     "iopub.execute_input": "2023-05-07T00:36:24.483146Z",
+     "iopub.status.busy": "2023-05-07T00:36:24.481763Z",
+     "iopub.status.idle": "2023-05-07T00:36:24.486989Z",
+     "shell.execute_reply": "2023-05-07T00:36:24.486064Z"
     },
     "papermill": {
-     "duration": 0.013617,
-     "end_time": "2023-05-07T00:24:11.555685",
+     "duration": 0.013243,
+     "end_time": "2023-05-07T00:36:24.489073",
      "exception": false,
-     "start_time": "2023-05-07T00:24:11.542068",
+     "start_time": "2023-05-07T00:36:24.475830",
      "status": "completed"
     },
     "tags": []
@@ -284,19 +284,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "edce5c37",
+   "id": "0c861b62",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:24:11.568000Z",
-     "iopub.status.busy": "2023-05-07T00:24:11.567546Z",
-     "iopub.status.idle": "2023-05-07T00:24:11.578858Z",
-     "shell.execute_reply": "2023-05-07T00:24:11.577648Z"
+     "iopub.execute_input": "2023-05-07T00:36:24.500734Z",
+     "iopub.status.busy": "2023-05-07T00:36:24.499895Z",
+     "iopub.status.idle": "2023-05-07T00:36:24.507767Z",
+     "shell.execute_reply": "2023-05-07T00:36:24.506869Z"
     },
     "papermill": {
-     "duration": 0.020843,
-     "end_time": "2023-05-07T00:24:11.581286",
+     "duration": 0.016575,
+     "end_time": "2023-05-07T00:36:24.510183",
      "exception": false,
-     "start_time": "2023-05-07T00:24:11.560443",
+     "start_time": "2023-05-07T00:36:24.493608",
      "status": "completed"
     },
     "tags": []
@@ -346,13 +346,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8724458f",
+   "id": "1f7e411e",
    "metadata": {
     "papermill": {
-     "duration": 0.004597,
-     "end_time": "2023-05-07T00:24:11.590908",
+     "duration": 0.004542,
+     "end_time": "2023-05-07T00:36:24.519607",
      "exception": false,
-     "start_time": "2023-05-07T00:24:11.586311",
+     "start_time": "2023-05-07T00:36:24.515065",
      "status": "completed"
     },
     "tags": []
@@ -368,19 +368,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2f73f906",
+   "id": "86bac3dc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:24:11.602997Z",
-     "iopub.status.busy": "2023-05-07T00:24:11.602582Z",
-     "iopub.status.idle": "2023-05-07T00:24:11.620957Z",
-     "shell.execute_reply": "2023-05-07T00:24:11.619772Z"
+     "iopub.execute_input": "2023-05-07T00:36:24.532871Z",
+     "iopub.status.busy": "2023-05-07T00:36:24.531436Z",
+     "iopub.status.idle": "2023-05-07T00:36:24.551292Z",
+     "shell.execute_reply": "2023-05-07T00:36:24.549913Z"
     },
     "papermill": {
-     "duration": 0.027967,
-     "end_time": "2023-05-07T00:24:11.623728",
+     "duration": 0.029584,
+     "end_time": "2023-05-07T00:36:24.554225",
      "exception": false,
-     "start_time": "2023-05-07T00:24:11.595761",
+     "start_time": "2023-05-07T00:36:24.524641",
      "status": "completed"
     },
     "tags": []
@@ -389,7 +389,11 @@
    "source": [
     "def my_agent(obs, config):\n",
     "    # Your code here: Amend the agent!\n",
+    "    \n",
+    "    ############################################ Helper Functions #######################################################\n",
     "    import random\n",
+    "    import numpy as np\n",
+    "    \n",
     "    # Calculates score if agent drops piece in selected column\n",
     "    def score_move(grid, col, mark, config):\n",
     "        next_grid = drop_piece(grid, col, mark, config)\n",
@@ -445,14 +449,21 @@
     "                if check_window(window, num_discs, piece, config):\n",
     "                    num_windows += 1\n",
     "        return num_windows\n",
+    "    \n",
+    "    ############################################## Logic #############################################################\n",
+    "\n",
     "    # Get list of valid moves\n",
     "    valid_moves = [c for c in range(config.columns) if obs.board[c] == 0]\n",
+    "    \n",
     "    # Convert the board to a 2D grid\n",
     "    grid = np.asarray(obs.board).reshape(config.rows, config.columns)\n",
+    "    \n",
     "    # Use the heuristic to assign a score to each possible board in the next turn\n",
     "    scores = dict(zip(valid_moves, [score_move(grid, col, obs.mark, config) for col in valid_moves]))\n",
+    "    \n",
     "    # Get a list of columns (moves) that maximize the heuristic\n",
     "    max_cols = [key for key in scores.keys() if scores[key] == max(scores.values())]\n",
+    "    \n",
     "    # Select at random from the maximizing columns\n",
     "    return random.choice(max_cols)"
    ]
@@ -460,19 +471,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "92588f30",
+   "id": "cef69cae",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:24:11.636476Z",
-     "iopub.status.busy": "2023-05-07T00:24:11.635263Z",
-     "iopub.status.idle": "2023-05-07T00:24:11.643231Z",
-     "shell.execute_reply": "2023-05-07T00:24:11.642398Z"
+     "iopub.execute_input": "2023-05-07T00:36:24.566662Z",
+     "iopub.status.busy": "2023-05-07T00:36:24.566182Z",
+     "iopub.status.idle": "2023-05-07T00:36:24.577423Z",
+     "shell.execute_reply": "2023-05-07T00:36:24.576392Z"
     },
     "papermill": {
-     "duration": 0.016517,
-     "end_time": "2023-05-07T00:24:11.645302",
+     "duration": 0.020584,
+     "end_time": "2023-05-07T00:36:24.579921",
      "exception": false,
-     "start_time": "2023-05-07T00:24:11.628785",
+     "start_time": "2023-05-07T00:36:24.559337",
      "status": "completed"
     },
     "tags": []
@@ -510,13 +521,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34155e20",
+   "id": "d91e3108",
    "metadata": {
     "papermill": {
-     "duration": 0.004668,
-     "end_time": "2023-05-07T00:24:11.655063",
+     "duration": 0.004944,
+     "end_time": "2023-05-07T00:36:24.590308",
      "exception": false,
-     "start_time": "2023-05-07T00:24:11.650395",
+     "start_time": "2023-05-07T00:36:24.585364",
      "status": "completed"
     },
     "tags": []
@@ -528,19 +539,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9965dccc",
+   "id": "8b0396ca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-07T00:24:11.666994Z",
-     "iopub.status.busy": "2023-05-07T00:24:11.666615Z",
-     "iopub.status.idle": "2023-05-07T00:24:11.676662Z",
-     "shell.execute_reply": "2023-05-07T00:24:11.675176Z"
+     "iopub.execute_input": "2023-05-07T00:36:24.603445Z",
+     "iopub.status.busy": "2023-05-07T00:36:24.602774Z",
+     "iopub.status.idle": "2023-05-07T00:36:24.613863Z",
+     "shell.execute_reply": "2023-05-07T00:36:24.612388Z"
     },
     "papermill": {
-     "duration": 0.019458,
-     "end_time": "2023-05-07T00:24:11.679529",
+     "duration": 0.020537,
+     "end_time": "2023-05-07T00:36:24.616104",
      "exception": false,
-     "start_time": "2023-05-07T00:24:11.660071",
+     "start_time": "2023-05-07T00:36:24.595567",
      "status": "completed"
     },
     "tags": []
@@ -550,7 +561,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function my_agent at 0x77a55686bf40> written to submission.py\n"
+      "<function my_agent at 0x74e5d5bef1c0> written to submission.py\n"
      ]
     }
    ],
@@ -568,13 +579,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b958118b",
+   "id": "2017d261",
    "metadata": {
     "papermill": {
-     "duration": 0.004855,
-     "end_time": "2023-05-07T00:24:11.689499",
+     "duration": 0.004783,
+     "end_time": "2023-05-07T00:36:24.625970",
      "exception": false,
-     "start_time": "2023-05-07T00:24:11.684644",
+     "start_time": "2023-05-07T00:36:24.621187",
      "status": "completed"
     },
     "tags": []
@@ -600,13 +611,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5f3ee04",
+   "id": "ae7c67d8",
    "metadata": {
     "papermill": {
-     "duration": 0.004806,
-     "end_time": "2023-05-07T00:24:11.699303",
+     "duration": 0.004882,
+     "end_time": "2023-05-07T00:36:24.635840",
      "exception": false,
-     "start_time": "2023-05-07T00:24:11.694497",
+     "start_time": "2023-05-07T00:36:24.630958",
      "status": "completed"
     },
     "tags": []
@@ -641,14 +652,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 30.602361,
-   "end_time": "2023-05-07T00:24:12.728829",
+   "duration": 27.000608,
+   "end_time": "2023-05-07T00:36:25.966507",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-05-07T00:23:42.126468",
+   "start_time": "2023-05-07T00:35:58.965899",
    "version": "2.4.0"
   }
  },
